# racconlang-cpp

./: .envrc  .gitignore  CMakeLists.txt  CompilerError.cpp  CompilerError.h  InternalError.cpp  InternalError.h  RaccoonLang.g4  RaccoonLang_old.g4  flake.nix  main.cpp  predeclare.h
ast/: AliasDeclaration.cpp  AliasDeclaration.h  BaseSignature.cpp  BaseSignature.h  ConstraintDeclaration.cpp  ConstraintDeclaration.h  ConstructorDeclaration.cpp  ConstructorDeclaration.h  DestructureDeclaration.cpp  DestructureDeclaration.h  EnumDeclaration.cpp  EnumDeclaration.h  EnumMemberDeclaration.cpp  EnumMemberDeclaration.h  FileUses.cpp  FileUses.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionSignature.cpp  FunctionSignature.h  GenericConstraint.cpp  GenericConstraint.h  GenericConstraintBase.cpp  GenericConstraintBase.h  Identifier.cpp  Identifier.h  ImplBlock.cpp  ImplBlock.h  ImplGetter.cpp  ImplGetter.h  ImplMethod.cpp  ImplMethod.h  ImplSetter.cpp  ImplSetter.h  InterfaceConstraint.cpp  InterfaceConstraint.h  InterfaceDeclaration.cpp  InterfaceDeclaration.h  InterfaceGetter.cpp  InterfaceGetter.h  (+36 more)
demo/: example.rc  main.rc  test.rc
demo/std/: Action.rc  Cloneable.rc  Disposable.rc  Exceptions.rc  Operators.rc  Option.rc  Print.rc  Resumable.rc  format.rc
demo/std/__unsafe/: extern.rc  mem.rc
demo/std/cmp/: Ord.rc  cmp.rc
demo/std/ds/: Array.rc  Interval.rc  Primitive.rc  String.rc
demo/std/io/: Buffer.rc  FileSystem.rc  Position.rc
errors/: CompilerError.cpp  CompilerError.h  ConsoleErrorHandler.cpp  ConsoleErrorHandler.h  ErrorCode.cpp  ErrorCode.h  ErrorContext.cpp  ErrorContext.h  ErrorHandler.cpp  ErrorHandler.h  ErrorLabel.cpp  ErrorLabel.h  ErrorLabelGroup.cpp  ErrorLabelGroup.h  InternalError.cpp  InternalError.h  SimpleErrorLabel.cpp  SimpleErrorLabel.h
lexer/: Lexer.cpp  Lexer.h  LexerErr.cpp  LexerErr.h  Token.cpp  Token.h  TokenResult.cpp  TokenResult.h  TokenTree.cpp  TokenTree.h  TokenTreeNode.cpp  TokenTreeNode.h  TokenType.cpp  TokenType.h
parser/: Parser.cpp  Parser.h  TokenTreeIterator.h
registry/: Alias.cpp  Alias.h  BuiltinType.cpp  BuiltinType.h  Enum.cpp  Enum.h  EnumMember.cpp  EnumMember.h  FunctionType.cpp  FunctionType.h  Id.cpp  Id.h  Interface.cpp  Interface.h  InterfaceGetter.cpp  InterfaceGetter.h  InterfaceMethod.cpp  InterfaceMethod.h  InterfaceSetter.cpp  InterfaceSetter.h  Module.cpp  Module.h  ModuleRegistry.cpp  ModuleRegistry.h  Parameter.cpp  Parameter.h  Struct.cpp  Struct.h  StructMember.cpp  StructMember.h  TupleType.cpp  TupleType.h  Type.cpp  Type.h  TypeBase.h  TypeRef.cpp  TypeRef.h  TypeRefImpl.h  TypeVar.cpp  TypeVar.h
sourceMap/: Location.cpp  Location.h  Source.cpp  Source.h  SourceMap.cpp  SourceMap.h
utils/: NodeUtils.h  Overload.h  StringUtils.h
